# Example-Todo-Gtk

./: Cargo.toml  README.md  build.rs  meson.build
data/: meson.build  org.gtk_rs.Todo.desktop.in
data/resources/: resources.gresource.xml  window.ui
resources/: gschema.xml  org.gtk_rs.Todo.gschema.xml  resources.gresources.xml  shortcuts.ui  window.ui
src/: main.rs  meson.build  utils.rs
src/task_object/: imp.rs  mod.rs
src/task_row/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
