[package]
name = "todo-gtk"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_8"] }
gtk = { version = "0.11.1", package = "gtk4", features = ["v4_20", "gnome_49"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
glib-build-tools = "0.22.0"
